tests/paczka1/fuzzy1/86664651.err
Error in line 11: WPWz7 S9PP 204,8
Error in line 5: S829 S839 49,2
Error in line 14: S829 S829 6,5
Error in line 15: S829 S911 37,6
Error in line 13: 8zMKUvcBcQh A899 19,7
Error in line 17: sYE A899 52,6
Error in line 23: lLuRRTQ5wS A899 47,2
